fix: better error responses in artist controller
